[gd_scene load_steps=10 format=3 uid="uid://c8obg1n1ud002"]

[ext_resource type="Script" path="res://MenuPausa2.gd" id="1_0jciy"]
[ext_resource type="FontFile" uid="uid://bgj17gt6w4fma" path="res://UI/fonts/Connection.otf" id="2_k1ep7"]
[ext_resource type="Texture2D" uid="uid://to86mfjqymhc" path="res://imgs/Over.jpg" id="3_wubw0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5ikq"]
bg_color = Color(0.439216, 0.0666667, 0.105882, 1)
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ushlo"]
bg_color = Color(0.705882, 0.137255, 0.196078, 1)
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ybaj"]
bg_color = Color(0.376471, 0.0509804, 0.0862745, 1)
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_r7h58"]
Button/styles/hover = SubResource("StyleBoxFlat_i5ikq")
Button/styles/normal = SubResource("StyleBoxFlat_ushlo")
Button/styles/pressed = SubResource("StyleBoxFlat_4ybaj")

[sub_resource type="Theme" id="Theme_wxfur"]
Button/styles/hover = SubResource("StyleBoxFlat_i5ikq")
Button/styles/normal = SubResource("StyleBoxFlat_ushlo")
Button/styles/pressed = SubResource("StyleBoxFlat_4ybaj")

[sub_resource type="SystemFont" id="SystemFont_ev5oe"]
font_names = PackedStringArray("Century Gothic")

[node name="MenuPausa2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0jciy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.392157, 0.478431, 0.639216)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Reanudar_Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_r7h58")
theme_override_fonts/font = ExtResource("2_k1ep7")
theme_override_font_sizes/font_size = 40
text = "REANUDAR  "

[node name="Reiniciar_Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_r7h58")
theme_override_fonts/font = ExtResource("2_k1ep7")
theme_override_font_sizes/font_size = 40
text = " REINICIO  "

[node name="Salir_Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_wxfur")
theme_override_fonts/font = ExtResource("2_k1ep7")
theme_override_font_sizes/font_size = 40
text = " SALIR"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 431.0
offset_top = 25.0
offset_right = 731.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("2_k1ep7")
theme_override_font_sizes/font_size = 40
text = "MENU DE PAUSA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Label"]
layout_mode = 0
offset_left = -83.0
offset_top = 87.0
offset_right = 217.0
offset_bottom = 131.0
theme_override_fonts/font = SubResource("SystemFont_ev5oe")
theme_override_font_sizes/font_size = 35
text = "Tu objetivo es: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.486275)
show_behind_parent = true
layout_mode = 2
offset_left = 4.0
offset_top = 1.0
offset_right = 1146.0
offset_bottom = 643.0
texture = ExtResource("3_wubw0")

[connection signal="pressed" from="CenterContainer/VBoxContainer/Reanudar_Button" to="." method="_on_reanudar_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Reiniciar_Button" to="." method="_on_reiniciar_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Salir_Button" to="." method="_on_salir_button_pressed"]
